k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oriyan-portfolio
  labels:
    name: oriyan-portfolio
    project: devops-portfolio
    owner: oriyan-rask
    environment: production
